# memento

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: config.py  dependencies.py  lifespan.py  main.py
app/api_auth/: crud.py  dependencies.py  models.py  routes.py  schemas.py
app/backboard/: __init__.py  client.py  executor.py  models.py
app/claude_hook/: crud.py  models.py  normalizer.py  routes.py  schemas.py
app/context_engine/: __init__.py  anchors.py  consistency.py  graph_tools.py  retrieval.py  schemas.py  staleness.py  staleness_sweep.py
app/distillation/: __init__.py  distill.py  matching.py  memory_write.py  pipeline.py  schemas.py  worker.py
app/file_upload/: crud.py  enrichment.py  gap_detection.py  models.py  routes.py  schemas.py  text_extract.py
app/gap_chat/: __init__.py  crud.py  models.py  routes.py  schemas.py  service.py
app/github/: __init__.py  client.py  crud.py  history.py  models.py  routes.py  tools.py
app/graph/: ask.py  crud.py  ids.py  live.py  models.py  qa_tools.py  routes.py  schemas.py
app/hackplate/: __init__.py  config.py  cors.py  dependencies.py  exceptions.py  hackplate_types.py  lifespan.py  logging.py  toml_settings.py  websocket.py
app/hackplate/cli/: __init__.py  cli.py  feature.py  mode.py  plate.py  start.py  utils.py
app/hackplate/plates/: abstract_plates.py
app/hackplate/user/: adapters.py  dependencies.py  managers.py  models.py  schemas.py  utils.py
app/job_queue/: crud.py  models.py
app/mcp/: models.py  routes.py  server.py  tools.py
app/orgs/: crud.py  models.py  routes.py  schemas.py
app/traversal/: __init__.py  channel.py  schemas.py  sessions.py
app/utils/: emailing.py
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/public/: _redirects
frontend/src/: App.tsx  main.tsx
frontend/src/components/: full-page-state.tsx
frontend/src/components/app-shell/: AppShell.tsx  ThemeToggle.tsx  org-context.tsx  (+1 more)
frontend/src/lib/: github.ts
migrations/: env.py  register_auth_model.py  register_models.py
modes/: CLAUDE.fast.md  CLAUDE.safe.md  settings.fast.json  settings.safe.json
tests/: conftest.py  test_backboard_wrapper.py  test_claude_hook_ingest.py  test_claude_hook_normalizer.py  test_context_engine_anchors.py  test_context_engine_consistency.py  test_context_engine_graph_tools.py  test_context_engine_retrieval.py  test_context_engine_staleness.py  test_context_engine_staleness_sweep.py  test_distillation_distill.py  test_distillation_matching.py  test_distillation_memory_write.py  test_distillation_pipeline.py  test_distillation_staleness.py  test_distillation_worker.py  test_executor.py  test_file_upload_enrichment.py  test_file_upload_gap_detection.py  test_file_upload_text_extract.py  test_gap_chat_service.py  test_github_client.py  test_github_history.py  test_github_tools.py  test_github_webhook.py  test_graph_aggregation.py  test_graph_ask.py  test_graph_qa_tools.py  test_orgs_invites.py  test_traversal_channel.py
(+67 files in other folders)
